--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">WELCOME TO GREENS</h1>
     <p class="lead">This is a <strong>DevOps CI/CD</strong> implementation using <strong>.NET</strong> code.</p>
 
     <!-- Optional: say what your pipeline does -->
